updated xml file

--- a/ae1Environment/web-ui/src/main/webapp/WEB-INF/web.xml
+++ b/ae1Environment/web-ui/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     </session-config>
     <welcome-file-list>
        <welcome-file>index.html</welcome-file>
-       <welcome-file>first.jsp</welcome-file>
+       <welcome-file>transaction.jsp</welcome-file>
        
    </welcome-file-list>
 </web-app>
