--- a/ae1Environment/web-ui/pom.xml
+++ b/ae1Environment/web-ui/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org-netbeans-modules-maven-j2ee.netbeans_2e_hint_2e_j2eeVersion>1.5</org-netbeans-modules-maven-j2ee.netbeans_2e_hint_2e_j2eeVersion>
+        <org-netbeans-modules-maven-j2ee.netbeans_2e_hint_2e_deploy_2e_server>Tomcat</org-netbeans-modules-maven-j2ee.netbeans_2e_hint_2e_deploy_2e_server>
     </properties>
     
     <dependencies>
@@ -26,7 +28,6 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-      
         
       
     </dependencies>
@@ -79,6 +80,9 @@
                 </executions>
             </plugin>
         </plugins>
+         
+        
+    
     </build>
 
 </project>
