--- a/ae1Environment/pom.xml
+++ b/ae1Environment/pom.xml
@@ -1,257 +1,102 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
       
-  <modelVersion>4.0.0</modelVersion>
-      
-  <groupId>solent.ac.uk.ood.examples</groupId>
-      
-  <artifactId>ae1Environment</artifactId>
-      
-  <version>1.0-SNAPSHOT</version>
-      
-  <packaging>pom</packaging>
-      
-    
-  <properties>
-            
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-            
-    <maven.compiler.source>1.8</maven.compiler.source>
-            
-    <maven.compiler.target>1.8</maven.compiler.target>
-            
-    <spring.version>5.1.9.RELEASE</spring.version>
-            
-    <log4j.version>2.11.0</log4j.version>
-            
-    <servlet-api.version>2.5</servlet-api.version>
-            
-    <jsp-api.version>2.1</jsp-api.version>
-            
-    <junit.version>4.12</junit.version>
-            
-    <hamcrest-core.version>1.3</hamcrest-core.version>
-            
-    <!-- dependencies for java 11 -->
-            
-    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-            
-    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
-            
-    <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
-            
-    <!-- needed by Hibernate for java 11 -->
-            
-    <javassist.version>3.27.0-GA</javassist.version>
-            
-    <cglib-nodep.version>3.2.12</cglib-nodep.version>
-        
-  </properties>
-      
-    
-  <modules>
-          
-    <module>web-ui</module>
-    <module>card-checker</module>
-    <module>client</module>
-  </modules>
-      
-    
-  <dependencyManagement>
-            
-    <dependencies>
-                  
-      <dependency>
-                        
-        <groupId>javax.servlet</groupId>
-                        
-        <artifactId>servlet-api</artifactId>
-                        
-        <version>${servlet-api.version}</version>
-         
-            
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>javax.servlet.jsp</groupId>
-                        
-        <artifactId>jsp-api</artifactId>
-                        
-        <version>${jsp-api.version}</version>
-         
-            
-      </dependency>
-                  
-      <!-- dependencies for java 11 -->
-                  
-      <dependency>
-                        
-        <groupId>javax.annotation</groupId>
-                        
-        <artifactId>javax.annotation-api</artifactId>
-                        
-        <version>${javax.annotation-api.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>javax.xml.bind</groupId>
-                        
-        <artifactId>jaxb-api</artifactId>
-                        
-        <version>${jaxb-api.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>org.glassfish.jaxb</groupId>
-                        
-        <artifactId>jaxb-runtime</artifactId>
-                        
-        <version>${jaxb-runtime.version}</version>
-                    
-      </dependency>
-                  
-      <!-- needed by Hibernate for java 11 -->
-                  
-      <dependency>
-                        
-        <groupId>org.javassist</groupId>
-                        
-        <artifactId>javassist</artifactId>
-                        
-        <version>${javassist.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>cglib</groupId>
-                        
-        <artifactId>cglib-nodep</artifactId>
-                        
-        <version>${cglib-nodep.version}</version>
-                    
-      </dependency>
-                  
-            
-      <!-- logging dependencies -->
-                  
-      <dependency>
-                        
-        <groupId>org.apache.logging.log4j</groupId>
-                        
-        <artifactId>log4j-api</artifactId>
-                        
-        <version>${log4j.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>org.apache.logging.log4j</groupId>
-                        
-        <artifactId>log4j-core</artifactId>
-                        
-        <version>${log4j.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>org.apache.logging.log4j</groupId>
-                        
-        <artifactId>log4j-web</artifactId>
-                        
-        <version>${log4j.version}</version>
-                    
-      </dependency>
-              
-            
-      <!-- junit dependencies -->
-                  
-      <dependency>
-                        
-        <groupId>junit</groupId>
-                        
-        <artifactId>junit</artifactId>
-                        
-        <version>${junit.version}</version>
-                    
-      </dependency>
-                  
-      <dependency>
-                        
-        <groupId>org.hamcrest</groupId>
-                        
-        <artifactId>hamcrest-core</artifactId>
-                        
-        <version>${hamcrest-core.version}</version>
-         
-            
-      </dependency>
-              
-    </dependencies>
-        
-  </dependencyManagement>
-      
-    
-  <!-- Fix for using maven https in netbeans 8 -->
-      
-  <repositories>
-            
-    <repository>
-                  
-      <id>central</id>
-                  
-      <name>Central Repository</name>
-                  
-      <url>https://repo.maven.apache.org/maven2</url>
-                  
-      <layout>default</layout>
-                  
-      <snapshots>
-                        
-        <enabled>false</enabled>
-                    
-      </snapshots>
-              
-    </repository>
-        
-  </repositories>
-   
-    
-  <pluginRepositories>
-            
-    <pluginRepository>
-                  
-      <id>central</id>
-                  
-      <name>Central Repository</name>
-                  
-      <url>https://repo.maven.apache.org/maven2</url>
-                  
-      <layout>default</layout>
-                  
-      <snapshots>
-                        
-        <enabled>false</enabled>
-                    
-      </snapshots>
-                  
-      <releases>
-                        
-        <updatePolicy>never</updatePolicy>
-                    
-      </releases>
-              
-    </pluginRepository>
-        
-  </pluginRepositories>
-      
-  <name>ae1Environment</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.solent.ood</groupId>
+    <artifactId>ae1Environment</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <log4j.version>2.12.1</log4j.version> 
+        <jersey.version>2.29.1</jersey.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <jsp-api.version>2.1</jsp-api.version>
+        <spring.version>5.1.9.RELEASE</spring.version>
+        <maven.surefire.plugin.version>2.18</maven.surefire.plugin.version>
+    </properties>
   
+    <modules>
+        
+       <!-- <module>card-checker</module>  -->
+        
+        
+        <module>client</module>
+        <module>web</module>
+        <module>card-checker</module>
+        
+    </modules>
+    
+    <dependencyManagement>
+        <dependencies>
+            <!-- servelet and jsp api's - provided by tomcat -->
+            <dependency>
+                <groupId>javax.servlet.jsp</groupId>
+                <artifactId>jsp-api</artifactId>
+                <version>${jsp-api.version}</version>
+            </dependency>
+        
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax.servlet-api.version}</version>
+            </dependency>
+            
+            <!-- jersey dependencies -->
+            <dependency>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.containers</groupId>
+                <artifactId>jersey-container-servlet-core</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.containers</groupId>
+                <artifactId>jersey-container-servlet</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <!-- this library allows jaxb classes to be treated as json -->
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <!-- this is needed for jersey when spring is not used to scan components -->
+            <dependency>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+        
+        
+            <!-- logging dependencies -->
+            <!-- Log4j API and Core implementation  -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            
+            <!-- Log4j web required to run in a servelet context  -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-web</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+        
+        </dependencies>
+    </dependencyManagement>
+    <name>ae1Environment</name>
 </project>
