--- a/ae1Environment/client/config.properties
+++ b/ae1Environment/client/config.properties
@@ -1,4 +1,3 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
+#Wed Nov 17 23:36:26 EET 2021
+password=221122
+name=admin201
