--- a/ae1Environment/web-ui/pom.xml
+++ b/ae1Environment/web-ui/pom.xml
@@ -17,18 +17,36 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>org.solent.ood</groupId>
+            <artifactId>card-checker</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>  
+        <dependency>
+            <groupId>solent.ac.uk.ood.examples</groupId>
+            <artifactId>bank-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
-      
-        
-      
     </dependencies>
 
     <build>
